--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="utf-8">
-  <title>FrontEndUniversal</title>
+  <title>DAZELPRO.MY.ID</title>
   <base href="/">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="./assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/quill.css">
+  <link rel="canonical" href = "https://dazelpro.my.id/">
 </head>
 <body>
   <app-root></app-root>
